--- a/index.html
+++ b/index.html
@@ -5,22 +5,57 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Document</title>
+
+
+      <link rel="stylesheet" href="mystyles.css">
+      
    </head>
-   <ul>
-      <li>
-         <b>Home</b>
-      </li>
-      <li>
-         <i>About</i> 
-      </li>
-      <li>
-         <tt>Contacts</tt> 
-      </li>
-   </ul>
+   
    <body>
-      <h1>Palm image</h1>
+
+      <h1>Fonts and lists</h1>
+      <ul>
+         <li>
+            <b>Bold font</b>
+         </li>
+         <li>
+            <i>Italic font</i> 
+         </li>
+         <li>
+            <tt>Teletype text</tt> 
+         </li>
+      </ul>
+
+   
+
+      <h2>Semantic elemtnts list</h2>
+      <ol>
+         <li>article</li>
+         <li>aside</li>
+         <li>details</li>
+         <li>figcaption</li>
+         <li>figure</li>
+         <li>footer</li>
+         <li>header</li>
+         <li>main</li>
+         <li>mark</li>
+         <li>nav</li>
+         <li>section</li>
+         <li>summary</li>
+         <li>time</li>
+      </ol>
+
+
+
+
+      <h2>Local Palm image below</h2>
       <img src="palm.jpg" alt="Palm image suppose to be hare" width="500" height="333">
-      <h2>Login screen</h2>
+
+
+      <h2>Non local palm image below</h2>
+      <img src=" https://gardeningsolutions.ifas.ufl.edu/images/plants/trees/ponytail_frontyard.jpg" alt="Another palm image suppose to be hare" width="500" height="333">
+     
+      <h2>Form fields</h2>
       <form action="/action_page.php">
          <label for="uname">Username:</label><br>
          <input type="text" id="uname" name="uname" value="Tom"><br>
@@ -30,9 +65,9 @@
          <input type="radio" id="away" name="status" value="away"><br>
          <label for="busy">Busy</label>
          <input type="radio" id="busy" name="status" value="busy"><br>
-         <input type="submit" value="Submit">
+         <input type="submit" value="Submit button not working">
       </form>
-      <h3>Online list</h3>
+      <h3>Table list</h3>
       <table border=1>
          <tr>
             <th>Username</th>
