--- a/kontaktai.html
+++ b/kontaktai.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
+    <link rel="stylesheet" href="mystyles.css">
 </head>
 <body>
    <h1>
@@ -14,29 +15,32 @@
 
 <form action="">
     <label for="fname">First name:</label>
-    <input type="text" id="fname" name="fname" placeholder="Enter your first name here"required><br>
-    <br>
+    <input type="text" id="fname" name="fname" placeholder="Enter your first name here"required>
+    <div></div>
     <label for="lname">Last name:</label>
-    <input type="text" id="lname" name="lname" placeholder="Enter your last name here"required><br>
-    <br>
+    <input type="text" id="lname" name="lname" placeholder="Enter your last name here"required>
+    <div></div>
     <label for="phone">Telephone:</label>
-    <input type="tel" id="phone" name="phone" placeholder="Enter your phone # here"required><br>
-    <br>
+    <input type="tel" id="phone" name="phone" placeholder="Enter your phone # here"required>
+    <div></div>
     <label for="mail">Email: </label>
-    <input type="email" id="mail" name="mail" placeholder="Enter your email here"required><br>
-    <br>
-    <label for="room"></label> <strong> Select room size:</strong></label><br>
+    <input type="email" id="mail" name="mail" placeholder="Enter your email here"required>
+    <div></div>
+    <label for="room"></label> <strong> Select room size:</strong></label>
+    <div></div>
     <input type="radio" id="small" name="room" value="small">
-    <label for="small">Small</label><br>
+    <label for="small">Small</label>
+    <div></div>
     <input type="radio" id="medium" name="room" value="medium">
-    <label for="medium">Medium</label><br>
+    <label for="medium">Medium</label>
+    <div></div>
     <input type="radio" id="big" name="room" value="big">
     <label for="big">Big</label>
-    <br>
-    <br>
+    <div></div>
+    <div></div>
     <input type="checkbox" id="terms" name="terms" required>
-    <label for="terms"> I agree with terms and conditions </label><br>
-    <br>
+    <label for="terms"> I agree with terms and conditions </label>
+    <div></div>
     <input type="submit" value="Submit">
 </form>
 
@@ -44,10 +48,10 @@
 
 Telephone number:
 <a href="tel:123-456-7890">123-456-7890</a>
-<br>
+<div></div>
 Email adress:
 <a href="mailto:random@email.com" target="_blank">random@email.com</a>
-<br>
+<div></div>
 Location:
 <a href="https://goo.gl/maps/CaeqRikGGGjeHkc27" target="_blank">Click for map</a>
 
