--- a/ND2savaite/Containers.html
+++ b/ND2savaite/Containers.html
@@ -1,80 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Forms</title>
-      <link rel="stylesheet" href="Containers.css">
-   </head>
-   <body>
-      <div class="body_container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Forms</title>
+    <link rel="stylesheet" href="Containers.css" />
+  </head>
+  <body>
+    <div class="body_container">
       <div class="main_container">
-         <h1>FORMS</h1>
-         <form action="/action_page.php" method="get">
-         <div class="forms_container"></div>
-         <div class="forms_items">
+        <h1>FORMS</h1>
+        <form action="/action_page.php" method="get">
+          <div class="forms_container"></div>
+          <div class="forms_items">
             <div class="info_container">
-               <label for="fname">First name:</label>
-               <input type="text" id="fname" name="fname" placeholder="Enter your first name here">
-               <div></div>
-               <label for="lname">Last name:</label>
-               <input type="text" id="lname" name="lname" placeholder="Enter your last name here">
+              <label for="fname">First name:</label>
+              <input
+                type="text"
+                id="fname"
+                name="fname"
+                placeholder="Enter your first name here"
+              />
+              <div></div>
+              <label for="lname">Last name:</label>
+              <input
+                type="text"
+                id="lname"
+                name="lname"
+                placeholder="Enter your last name here"
+              />
             </div>
             <div class="info_container">
-               <label for="phone">Telephone:</label>
-               <input type="tel" id="phone" name="phone" placeholder="Enter your phone # here"  >
-               <div></div>
-               <label for="mail">Email: </label>
-               <input type="email" id="mail" name="mail" placeholder="Enter your email here"  >
+              <label for="phone">Telephone:</label>
+              <input
+                type="tel"
+                id="phone"
+                name="phone"
+                placeholder="Enter your phone # here"
+              />
+              <div></div>
+              <label for="mail">Email: </label>
+              <input
+                type="email"
+                id="mail"
+                name="mail"
+                placeholder="Enter your email here"
+              />
             </div>
             <div class="info_container">
-               <label for="ffname">Town:</label>
-               <input type="text" id="ffname" name="ffname" placeholder="Enter your town here"  >
-               <div></div>
-               <label for="lfname">Country:</label>
-               <input type="text" id="lfname" name="lfname" placeholder="Enter your country here"  >
+              <label for="ffname">Town:</label>
+              <input
+                type="text"
+                id="ffname"
+                name="ffname"
+                placeholder="Enter your town here"
+              />
+              <div></div>
+              <label for="lfname">Country:</label>
+              <input
+                type="text"
+                id="lfname"
+                name="lfname"
+                placeholder="Enter your country here"
+              />
             </div>
-         </div>
-         <div class="forms_container"></div>
-         <div class="forms_items">
+          </div>
+          <div class="forms_container"></div>
+          <div class="forms_items">
             <div class="info_container">
-               <label for="fffname">First name:</label>
-               <input type="text" id="fffname" name="fffname" placeholder="Enter your first name here"  >
-               <div></div>
-               <label for="lffname">Last name:</label>
-               <input type="text" id="lffname" name="lffname" placeholder="Enter your last name here"  >
+              <label for="fffname">First name:</label>
+              <input
+                type="text"
+                id="fffname"
+                name="fffname"
+                placeholder="Enter your first name here"
+              />
+              <div></div>
+              <label for="lffname">Last name:</label>
+              <input
+                type="text"
+                id="lffname"
+                name="lffname"
+                placeholder="Enter your last name here"
+              />
             </div>
             <div class="info_container">
-               <label for="fphone">Telephone:</label>
-               <input type="tel" id="fphone" name="fphone" placeholder="Enter your phone # here" >
-               <div></div>
-               <label for="fmail">Email: </label>
-               <input type="email" id="fmail" name="fmail" placeholder="Enter your email here" >
+              <label for="fphone">Telephone:</label>
+              <input
+                type="tel"
+                id="fphone"
+                name="fphone"
+                placeholder="Enter your phone # here"
+              />
+              <div></div>
+              <label for="fmail">Email: </label>
+              <input
+                type="email"
+                id="fmail"
+                name="fmail"
+                placeholder="Enter your email here"
+              />
             </div>
             <div class="info_container">
-               <label for="ffffname">Town:</label>
-               <input type="text" id="ffffname" name="ffffname" placeholder="Enter your town here" >
-               <div></div>
-               <label for="lfffname">Country:</label>
-               <input type="text" id="lfffname" name="lfffname" placeholder="Enter your country here" >
+              <label for="ffffname">Town:</label>
+              <input
+                type="text"
+                id="ffffname"
+                name="ffffname"
+                placeholder="Enter your town here"
+              />
+              <div></div>
+              <label for="lfffname">Country:</label>
+              <input
+                type="text"
+                id="lfffname"
+                name="lfffname"
+                placeholder="Enter your country here"
+              />
             </div>
-         </div>
-         <input type="submit" value="Submit">
-         </form>
+          </div>
+          <input type="submit" value="Submit" />
+        </form>
       </div>
-         <h2>Our contacts</h2>
-         <div>
-            Telephone number:
-            <a href="tel:123-456-7890">123-456-7890</a>
-            <div></div>
-            Email adress:
-            <a href="mailto:random@email.com" target="_blank">random@email.com</a>
-            <div></div>
-            Location:
-            <a href="https://goo.gl/maps/CaeqRikGGGjeHkc27" target="_blank">Click for map</a>
-         </div>
+      <h2>Our contacts</h2>
+      <div>
+        Telephone number:
+        <a href="tel:123-456-7890">123-456-7890</a>
+        <div></div>
+        Email adress:
+        <a href="mailto:random@email.com" target="_blank">random@email.com</a>
+        <div></div>
+        Location:
+        <a href="https://goo.gl/maps/CaeqRikGGGjeHkc27" target="_blank"
+          >Click for map</a
+        >
       </div>
-
-   </body>
+    </div>
+  </body>
 </html>
