--- a/week3/uzduotis.html
+++ b/week3/uzduotis.html
@@ -7,6 +7,7 @@
     <title>Uzduotis</title>
     <link rel="stylesheet" href="../../assets/normalize.css" />
     <link rel="stylesheet" href="uzduotis.css" />
+    <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
     <div class="main_container">
@@ -24,6 +25,15 @@
             />
             <div class="title">Title text</div>
             <div class="description">Description text</div>
+            <div class="download">
+              <svg width="22" height="24" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M20.9 20.79c.607 0 1.1.494 1.1 1.104 0 .61-.493 1.106-1.1 1.106H1.1C.493 23 0 22.505 0 21.894c0-.61.493-1.104 1.1-1.104h19.8zM11 2a1.108 1.108 0 0 1 1.1 1.106V14.81l3.63-3.647a1.096 1.096 0 0 1 1.493.058 1.11 1.11 0 0 1 .058 1.5l-5.5 5.526a1.095 1.095 0 0 1-1.551 0l-5.5-5.526a1.11 1.11 0 0 1 .058-1.5 1.096 1.096 0 0 1 1.493-.058L9.9 14.81V3.106C9.9 2.496 10.393 2 11 2z"
+                  fill="#F73859"
+                  fill-rule="evenodd"
+                ></path>
+              </svg>
+            </div>
           </div>
         </div>
         <div class="item">
@@ -34,6 +44,15 @@
             />
             <div class="title">Title text</div>
             <div class="description">Description text</div>
+            <div class="download">
+              <svg width="22" height="24" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M20.9 20.79c.607 0 1.1.494 1.1 1.104 0 .61-.493 1.106-1.1 1.106H1.1C.493 23 0 22.505 0 21.894c0-.61.493-1.104 1.1-1.104h19.8zM11 2a1.108 1.108 0 0 1 1.1 1.106V14.81l3.63-3.647a1.096 1.096 0 0 1 1.493.058 1.11 1.11 0 0 1 .058 1.5l-5.5 5.526a1.095 1.095 0 0 1-1.551 0l-5.5-5.526a1.11 1.11 0 0 1 .058-1.5 1.096 1.096 0 0 1 1.493-.058L9.9 14.81V3.106C9.9 2.496 10.393 2 11 2z"
+                  fill="#F73859"
+                  fill-rule="evenodd"
+                ></path>
+              </svg>
+            </div>
           </div>
         </div>
         <div class="item">
@@ -44,6 +63,15 @@
             />
             <div class="title">Title text</div>
             <div class="description">Description text</div>
+            <div class="download">
+              <svg width="22" height="24" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M20.9 20.79c.607 0 1.1.494 1.1 1.104 0 .61-.493 1.106-1.1 1.106H1.1C.493 23 0 22.505 0 21.894c0-.61.493-1.104 1.1-1.104h19.8zM11 2a1.108 1.108 0 0 1 1.1 1.106V14.81l3.63-3.647a1.096 1.096 0 0 1 1.493.058 1.11 1.11 0 0 1 .058 1.5l-5.5 5.526a1.095 1.095 0 0 1-1.551 0l-5.5-5.526a1.11 1.11 0 0 1 .058-1.5 1.096 1.096 0 0 1 1.493-.058L9.9 14.81V3.106C9.9 2.496 10.393 2 11 2z"
+                  fill="#F73859"
+                  fill-rule="evenodd"
+                ></path>
+              </svg>
+            </div>
           </div>
         </div>
         <div class="item">
@@ -54,6 +82,15 @@
             />
             <div class="title">Title text</div>
             <div class="description">Description text</div>
+            <div class="download">
+              <svg width="22" height="24" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M20.9 20.79c.607 0 1.1.494 1.1 1.104 0 .61-.493 1.106-1.1 1.106H1.1C.493 23 0 22.505 0 21.894c0-.61.493-1.104 1.1-1.104h19.8zM11 2a1.108 1.108 0 0 1 1.1 1.106V14.81l3.63-3.647a1.096 1.096 0 0 1 1.493.058 1.11 1.11 0 0 1 .058 1.5l-5.5 5.526a1.095 1.095 0 0 1-1.551 0l-5.5-5.526a1.11 1.11 0 0 1 .058-1.5 1.096 1.096 0 0 1 1.493-.058L9.9 14.81V3.106C9.9 2.496 10.393 2 11 2z"
+                  fill="#F73859"
+                  fill-rule="evenodd"
+                ></path>
+              </svg>
+            </div>
           </div>
         </div>
         <div class="item">
@@ -64,6 +101,15 @@
             />
             <div class="title">Title text</div>
             <div class="description">Description text</div>
+            <div class="download">
+              <svg width="22" height="24" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M20.9 20.79c.607 0 1.1.494 1.1 1.104 0 .61-.493 1.106-1.1 1.106H1.1C.493 23 0 22.505 0 21.894c0-.61.493-1.104 1.1-1.104h19.8zM11 2a1.108 1.108 0 0 1 1.1 1.106V14.81l3.63-3.647a1.096 1.096 0 0 1 1.493.058 1.11 1.11 0 0 1 .058 1.5l-5.5 5.526a1.095 1.095 0 0 1-1.551 0l-5.5-5.526a1.11 1.11 0 0 1 .058-1.5 1.096 1.096 0 0 1 1.493-.058L9.9 14.81V3.106C9.9 2.496 10.393 2 11 2z"
+                  fill="#F73859"
+                  fill-rule="evenodd"
+                ></path>
+              </svg>
+            </div>
           </div>
         </div>
         <div class="item">
@@ -74,6 +120,15 @@
             />
             <div class="title">Title text</div>
             <div class="description">Description text</div>
+            <div class="download">
+              <svg width="22" height="24" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M20.9 20.79c.607 0 1.1.494 1.1 1.104 0 .61-.493 1.106-1.1 1.106H1.1C.493 23 0 22.505 0 21.894c0-.61.493-1.104 1.1-1.104h19.8zM11 2a1.108 1.108 0 0 1 1.1 1.106V14.81l3.63-3.647a1.096 1.096 0 0 1 1.493.058 1.11 1.11 0 0 1 .058 1.5l-5.5 5.526a1.095 1.095 0 0 1-1.551 0l-5.5-5.526a1.11 1.11 0 0 1 .058-1.5 1.096 1.096 0 0 1 1.493-.058L9.9 14.81V3.106C9.9 2.496 10.393 2 11 2z"
+                  fill="#F73859"
+                  fill-rule="evenodd"
+                ></path>
+              </svg>
+            </div>
           </div>
         </div>
       </div>
