--- a/website/website.html
+++ b/website/website.html
@@ -1,38 +1,34 @@
-
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Personal</title>
-        <link rel="stylesheet" href="../assets/normalize.css" />
-        <link rel="stylesheet" href="../assets/website.css" />
-        <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-    
-    </head>
-    <body>
-    <header>
-        <nav>
-            <a href="#">  <i class="las la-atom"></i></a>
-            <a class="personal" href="#">  Personal</i></a>
-        </nav>
-        <nav>
-            <ul>
-                <li> <a href="#">  HOME</i></a></li>
-                <li> <a href="#">  ABOUT</i></a></li>
-                <li> <a href="#">  PORTFOLIO</i></a></li>
-                <li> <a href="#">  SERVICES</i></a></li>
-                <li> <a href="#">  PRICING</i></a></li>
-                <li> <a href="#">  BLOG</i></a></li>
-                <li> <a href="#">  PAGES</i></a></li>
-                <li> <a href="#">  CONTACT</i></a></li>
-        </ul>
-        </nav>
-        
-    </header>
-    <div class="big"></div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus consequuntur blanditiis amet impedit quaerat expedita, nulla omnis officiis minima porro, fugit cum, sit excepturi distinctio recusandae. Repellat, alias eos. Pariatur!</p>
-    <div class="big"></div>
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Personal</title>
+      <link rel="stylesheet" href="../assets/normalize.css" />
+      <link rel="stylesheet" href="../assets/website.css" />
+      <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+   </head>
+   <body>
+      <section>
+         <header>
+            <nav>
+               <a href="#">  <i class="las la-atom"></i></a>
+               <a class="personal" href="#">  Personal</a>
+            </nav>
+            <nav>
+               <ul>
+                  <li> <a href="#">  HOME</a></li>
+                  <li> <a href="#">  ABOUT</a></li>
+                  <li> <a href="#">  PORTFOLIO</a></li>
+                  <li> <a href="#">  SERVICES</a></li>
+                  <li> <a href="#">  PRICING</a></li>
+                  <li> <a href="#">  BLOG</a></li>
+                  <li> <a href="#">  PAGES</a></li>
+                  <li> <a href="#">  CONTACT</a></li>
+               </ul>
+            </nav>
+         </header>
+      </section>
+   </body>
+</html>
