--- a/website/website.html
+++ b/website/website.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Personal</title>
-      <link rel="stylesheet" href="../assets/normalize.css" />
-      <link rel="stylesheet" href="../assets/website.css" />
-      <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-   </head>
-   <body>
-      <section>
-         <header>
-            <nav>
-               <a href="#">  <i class="las la-atom"></i></a>
-               <a class="personal" href="#">  Personal</a>
-            </nav>
-            <nav>
-               <ul>
-                  <li> <a href="#">  HOME</a></li>
-                  <li> <a href="#">  ABOUT</a></li>
-                  <li> <a href="#">  PORTFOLIO</a></li>
-                  <li> <a href="#">  SERVICES</a></li>
-                  <li> <a href="#">  PRICING</a></li>
-                  <li> <a href="#">  BLOG</a></li>
-                  <li> <a href="#">  PAGES</a></li>
-                  <li> <a href="#">  CONTACT</a></li>
-               </ul>
-            </nav>
-         </header>
-      </section>
-   </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Personal</title>
+    <link rel="stylesheet" href="../assets/normalize.css" />
+    <link rel="stylesheet" href="../assets/website.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="row">
+          <nav>
+            <a href="#"> <i class="las la-atom"></i></a>
+            <a class="personal" href="#"> Personal</a>
+          </nav>
+          <nav>
+            <ul>
+              <li><a href="#"> HOME</a></li>
+              <li><a href="#"> ABOUT</a></li>
+              <li><a href="#"> PORTFOLIO</a></li>
+              <li><a href="#"> SERVICES</a></li>
+              <li><a href="#"> PRICING</a></li>
+              <li><a href="#"> BLOG</a></li>
+              <li><a href="#"> PAGES</a></li>
+              <li><a href="#"> CONTACT</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
