sestadienio rytas su blog

--- a/website/blog.html
+++ b/website/blog.html
@@ -77,44 +77,204 @@
       <div class="story_container">
         <div class="story_box">
           <div class="story_image">
-            <a
-              href="#"
-            ><img src="https://preview.colorlib.com/theme/personal/img/blog/xcat-widget1.jpg.pagespeed.ic.OB0FusT_XG.webp" alt="">
-          <div class="image_overlay">
-            <div class="image_overlay_box">
-              <h2>social life</h2>
-              <span>___________________</span>
-              <h3>Enjoy your life together</h3>
+            <a href="#">
+              <img
+                src="https://preview.colorlib.com/theme/personal/img/blog/xcat-widget1.jpg.pagespeed.ic.OB0FusT_XG.webp"
+                alt=""
+              />
+              <div class="image_overlay">
+                <div class="image_overlay_box">
+                  <h2>social life</h2>
+                  <span>___________________</span>
+                  <h3>Enjoy your life together</h3>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="story_box">
+          <div class="story_image">
+            <a href="#">
+              <img
+                src="https://preview.colorlib.com/theme/personal/img/blog/xcat-widget2.jpg.pagespeed.ic.3RCDR_AeaY.webp"
+                alt=""
+              />
+              <div class="image_overlay">
+                <div class="image_overlay_box">
+                  <h2>politics</h2>
+                  <span>___________________</span>
+                  <h3>Be a part of politics</h3>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="story_box">
+          <div class="story_image">
+            <a href="#">
+              <img
+                src="https://preview.colorlib.com/theme/personal/img/blog/xcat-widget3.jpg.pagespeed.ic.8AuSYKIrOh.webp"
+                alt=""
+              />
+              <div class="image_overlay">
+                <div class="image_overlay_box">
+                  <h2>food</h2>
+                  <span>___________________</span>
+                  <h3>Let the food be finished</h3>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="posts">
+      <div class="posts_container">
+        <div class="posts_left">
+          <div class="left_box">
+            <div class="left_box_info">
+              <div class="info_box_links">
+                <ul>
+                  <li><a href="#"> Food,</a></li>
+                  <li><a href="#"> Technology,</a></li>
+                  <li><a href="#"> Politics,</a></li>
+                  <li><a href="#"> Lifestyle</a></li>
+                </ul>
+              </div>
+              <div class="info_box_details">
+                <p><a href="#">Mark wiens</a> <span><i class="las la-user"></i></span></p>
+                <p><a href="#">12 Dec, 2017</a> <span><i class="las la-calendar"></i></span></p>
+                <p><a href="#">1.2M Views</a> <span><i class="las la-eye"></i></span></p>
+                <p><a href="#">06 Comments</a> <span><i class="las la-comment-alt"></i></span></p>
+              </div>
             </div>
-          </div></a>
+            <div class="left_box_article">
+              <div class="article_image">
+                <img
+                  src="https://preview.colorlib.com/theme/personal/img/blog/xfeature-img1.jpg.pagespeed.ic.6v6CI5mm0C.webp"
+                  alt=""
+                />
+              </div>
+              <a href="#"> <h1>Astronomy Binoculars A Great Alternative</h1></a>
+              <p>
+                MCSE boot camps have its supporters and its detractors. Some
+                people do not understand why you should have to spend money on
+                boot camp when you can get the MCSE study materials yourself at
+                a fraction.
+              </p>
+              <a href="#" class="article_button">View More</a>
+            </div>
+          </div>
+          <div class="left_box">
+            <div class="left_box_info">
+              <div class="info_box_links">
+                <ul>
+                  <li><a href="#"> Food,</a></li>
+                  <li><a href="#"> Technology,</a></li>
+                  <li><a href="#"> Politics,</a></li>
+                  <li><a href="#"> Lifestyle</a></li>
+                </ul>
+              </div>
+              <div class="info_box_details">
+                <p><a href="#">Mark wiens</a> <span><i class="las la-user"></i></span></p>
+                <p><a href="#">12 Dec, 2017</a> <span><i class="las la-calendar"></i></span></p>
+                <p><a href="#">1.2M Views</a> <span><i class="las la-eye"></i></span></p>
+                <p><a href="#">06 Comments</a> <span><i class="las la-comment-alt"></i></span></p>
+              </div>
+            </div>
+            <div class="left_box_article">
+              <div class="article_image">
+                <img
+                  src="https://preview.colorlib.com/theme/personal/img/blog/xfeature-img1.jpg.pagespeed.ic.6v6CI5mm0C.webp"
+                  alt=""
+                />
+              </div>
+              <a href="#"> <h1>Astronomy Binoculars A Great Alternative</h1></a>
+              <p>
+                MCSE boot camps have its supporters and its detractors. Some
+                people do not understand why you should have to spend money on
+                boot camp when you can get the MCSE study materials yourself at
+                a fraction.
+              </p>
+              <a href="#" class="article_button">View More</a>
+            </div>
+          </div>
+          <div class="left_box">
+            <div class="left_box_info">
+              <div class="info_box_links">
+                <ul>
+                  <li><a href="#"> Food,</a></li>
+                  <li><a href="#"> Technology,</a></li>
+                  <li><a href="#"> Politics,</a></li>
+                  <li><a href="#"> Lifestyle</a></li>
+                </ul>
+              </div>
+              <div class="info_box_details">
+                <p><a href="#">Mark wiens</a> <span><i class="las la-user"></i></span></p>
+                <p><a href="#">12 Dec, 2017</a> <span><i class="las la-calendar"></i></span></p>
+                <p><a href="#">1.2M Views</a> <span><i class="las la-eye"></i></span></p>
+                <p><a href="#">06 Comments</a> <span><i class="las la-comment-alt"></i></span></p>
+              </div>
+            </div>
+            <div class="left_box_article">
+              <div class="article_image">
+                <img
+                  src="https://preview.colorlib.com/theme/personal/img/blog/xfeature-img1.jpg.pagespeed.ic.6v6CI5mm0C.webp"
+                  alt=""
+                />
+              </div>
+              <a href="#"> <h1>Astronomy Binoculars A Great Alternative</h1></a>
+              <p>
+                MCSE boot camps have its supporters and its detractors. Some
+                people do not understand why you should have to spend money on
+                boot camp when you can get the MCSE study materials yourself at
+                a fraction.
+              </p>
+              <a href="#" class="article_button">View More</a>
+            </div>
           </div>
         </div>
-        <div class="story_box">
-          <div class="story_image">
-            <a
-              href="#"
-            ><img src="https://preview.colorlib.com/theme/personal/img/blog/xcat-widget2.jpg.pagespeed.ic.3RCDR_AeaY.webp" alt="">
-            <div class="image_overlay">
-              <div class="image_overlay_box">
-                <h2>politics</h2>
-                <span>___________________</span>
-                <h3>Be a part of politics</h3>
-              </div>
-            </div></a></a>
+        <div class="posts_right">
+          <div class="right_box">
+            <form class="search_box" action="#">
+              <input type="text" placeholder="Search Posts" name="search" />
+              <button type="submit"><i class="las la-search"></i></button>
+            </form>
           </div>
-        </div>
-        <div class="story_box">
-          <div class="story_image">
-            <a
-              href="#"
-            ><img src="https://preview.colorlib.com/theme/personal/img/blog/xcat-widget3.jpg.pagespeed.ic.8AuSYKIrOh.webp" alt="">
-            <div class="image_overlay">
-              <div class="image_overlay_box">
-                <h2>food</h2>
-                <span>___________________</span>
-                <h3>Let the food be finished</h3>
-              </div>
-            </div></a></a>
+          <div class="right_box">
+            <h6>___________________________________</h6>
+          </div>
+          <div class="right_box">
+            <div class="right_box_pic">
+              <img
+                src="https://preview.colorlib.com/theme/personal/img/blog/xuser-info.png.pagespeed.ic.1A1JgX1vWU.webp"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="right_box">
+            <a href="#">
+              <h3>Charlie Barber</h3>
+            </a>
+          </div>
+          <div class="right_box">
+            <p>Senior blog writer</p>
+          </div>
+          <div class="right_box">
+            <div class="right_box_social">
+              <i class="lab la-facebook-f"></i>
+              <i class="lab la-twitter"></i>
+              <i class="lab la-github"></i>
+              <i class="lab la-behance"></i>
+            </div>
+          </div>
+          <div class="right_box">
+            <p>
+              Boot camps have its supporters andit sdetractors. Some people do
+              not understand why you should have to spend money on boot camp
+              when you can get. Boot camps have itssuppor ters andits
+              detractors.
+            </p>
           </div>
         </div>
       </div>
