--- a/website/blog.html
+++ b/website/blog.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../assets/normalize.css" />
     <link rel="stylesheet" href="../assets/website.css" />
     <link rel="stylesheet" href="../assets/blog.css" />
+    <link rel="stylesheet" href="../assets/footer.css" />
     <link
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
@@ -59,6 +60,7 @@
       </div>
     </header>
     <!-- HEADER END -->
+    <!-- BLOG START -->
     <section class="blog">
       <div class="blog_overlay">
         <div class="blog_container">
@@ -142,10 +144,22 @@
                 </ul>
               </div>
               <div class="info_box_details">
-                <p><a href="#">Mark wiens</a> <span><i class="las la-user"></i></span></p>
-                <p><a href="#">12 Dec, 2017</a> <span><i class="las la-calendar"></i></span></p>
-                <p><a href="#">1.2M Views</a> <span><i class="las la-eye"></i></span></p>
-                <p><a href="#">06 Comments</a> <span><i class="las la-comment-alt"></i></span></p>
+                <p>
+                  <a href="#">Mark wiens</a>
+                  <span><i class="las la-user"></i></span>
+                </p>
+                <p>
+                  <a href="#">12 Dec, 2017</a>
+                  <span><i class="las la-calendar"></i></span>
+                </p>
+                <p>
+                  <a href="#">1.2M Views</a>
+                  <span><i class="las la-eye"></i></span>
+                </p>
+                <p>
+                  <a href="#">06 Comments</a>
+                  <span><i class="las la-comment-alt"></i></span>
+                </p>
               </div>
             </div>
             <div class="left_box_article">
@@ -176,10 +190,22 @@
                 </ul>
               </div>
               <div class="info_box_details">
-                <p><a href="#">Mark wiens</a> <span><i class="las la-user"></i></span></p>
-                <p><a href="#">12 Dec, 2017</a> <span><i class="las la-calendar"></i></span></p>
-                <p><a href="#">1.2M Views</a> <span><i class="las la-eye"></i></span></p>
-                <p><a href="#">06 Comments</a> <span><i class="las la-comment-alt"></i></span></p>
+                <p>
+                  <a href="#">Mark wiens</a>
+                  <span><i class="las la-user"></i></span>
+                </p>
+                <p>
+                  <a href="#">12 Dec, 2017</a>
+                  <span><i class="las la-calendar"></i></span>
+                </p>
+                <p>
+                  <a href="#">1.2M Views</a>
+                  <span><i class="las la-eye"></i></span>
+                </p>
+                <p>
+                  <a href="#">06 Comments</a>
+                  <span><i class="las la-comment-alt"></i></span>
+                </p>
               </div>
             </div>
             <div class="left_box_article">
@@ -210,10 +236,22 @@
                 </ul>
               </div>
               <div class="info_box_details">
-                <p><a href="#">Mark wiens</a> <span><i class="las la-user"></i></span></p>
-                <p><a href="#">12 Dec, 2017</a> <span><i class="las la-calendar"></i></span></p>
-                <p><a href="#">1.2M Views</a> <span><i class="las la-eye"></i></span></p>
-                <p><a href="#">06 Comments</a> <span><i class="las la-comment-alt"></i></span></p>
+                <p>
+                  <a href="#">Mark wiens</a>
+                  <span><i class="las la-user"></i></span>
+                </p>
+                <p>
+                  <a href="#">12 Dec, 2017</a>
+                  <span><i class="las la-calendar"></i></span>
+                </p>
+                <p>
+                  <a href="#">1.2M Views</a>
+                  <span><i class="las la-eye"></i></span>
+                </p>
+                <p>
+                  <a href="#">06 Comments</a>
+                  <span><i class="las la-comment-alt"></i></span>
+                </p>
               </div>
             </div>
             <div class="left_box_article">
@@ -279,5 +317,46 @@
         </div>
       </div>
     </section>
+    <!-- BLOG END -->
+    <!-- FOOTER START -->
+    <footer>
+      <div class="footer_container">
+        <div class="footer_item">
+          <h4>About Me</h4>
+          <p>
+            We have tested a number of registry fix and clean utilities and
+            present our top 3 list on our site for your convenience.
+          </p>
+          <p>
+            Copyright ©2021 All rights reserved | This template is made with
+            <span><i class="lar la-heart"></i></span> by
+            <a href="https://www.facebook.com/arijus.viskanta">Arijus</a>
+          </p>
+        </div>
+        <div class="footer_item">
+          <h4>Newsletter</h4>
+          <p>Stay updated with our latest trends</p>
+          <div class="footer_form">
+            <form action="#" class="footer_form_email">
+              <input type="email" placeholder="Enter Email Adress" name="email"/>
+            </form>
+            <form action="#" class="footer_form_submit">
+              <button type="submit"><i class="las la-arrow-right"></i></button>
+            </form>
+          </div>
+        </div>
+        <div class="footer_item" id="footer_item_social">
+          <h4>Follow Me</h4>
+          <p>Let us be social</p>
+          <div class="footer_social">
+            <i class="lab la-facebook-f"></i>
+            <i class="lab la-twitter"></i>
+            <i class="lab la-github"></i>
+            <i class="lab la-behance"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- FOOTER END -->
   </body>
 </html>
