--- a/website/website.html
+++ b/website/website.html
@@ -7,6 +7,7 @@
     <title>Personal</title>
     <link rel="stylesheet" href="../assets/normalize.css" />
     <link rel="stylesheet" href="../assets/website.css" />
+    <link rel="stylesheet" href="../assets/footer.css" />
     <link
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
@@ -209,5 +210,45 @@
       </div>
     </section>
     <!-- CREDITS END-->
+     <!-- FOOTER START -->
+     <footer>
+      <div class="footer_container">
+        <div class="footer_item">
+          <h4>About Me</h4>
+          <p>
+            We have tested a number of registry fix and clean utilities and
+            present our top 3 list on our site for your convenience.
+          </p>
+          <p>
+            Copyright ©2021 All rights reserved | This template is made with
+            <span><i class="lar la-heart"></i></span> by
+            <a href="https://www.facebook.com/arijus.viskanta">Arijus</a>
+          </p>
+        </div>
+        <div class="footer_item">
+          <h4>Newsletter</h4>
+          <p>Stay updated with our latest trends</p>
+          <div class="footer_form">
+            <form action="#" class="footer_form_email">
+              <input type="email" placeholder="Enter Email Adress" name="email"/>
+            </form>
+            <form action="#" class="footer_form_submit">
+              <button type="submit"><i class="las la-arrow-right"></i></button>
+            </form>
+          </div>
+        </div>
+        <div class="footer_item" id="footer_item_social">
+          <h4>Follow Me</h4>
+          <p>Let us be social</p>
+          <div class="footer_social">
+            <i class="lab la-facebook-f"></i>
+            <i class="lab la-twitter"></i>
+            <i class="lab la-github"></i>
+            <i class="lab la-behance"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- FOOTER END -->
   </body>
 </html>
